--- a/charts/cp-ksql-server/templates/external-service.yaml
+++ b/charts/cp-ksql-server/templates/external-service.yaml
@@ -22,7 +22,7 @@ spec:
   {{- range $cidr := .Values.external.loadBalancerSourceRanges }}
     - {{ $cidr }}
   {{- end }}
-  {{- end }}
+  {{- end }
   ports:
     - name: server-proxy
       port: {{ .Values.external.port }}
