--- a/ct.yaml
+++ b/ct.yaml
@@ -1,5 +1,5 @@
 target-branch: main
 chart-dirs:
-  - ./helm-charts/charts
+  - charts
 helm-extra-args: --timeout 600s
 check-version-increment: false
