--- a/.github/workflows/helm-test.yaml
+++ b/.github/workflows/helm-test.yaml
@@ -5,19 +5,66 @@ on:
     branches:
       - master
 
+# jobs:
+#   lint:
+#     name: Lint
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v2
+
+#       - name: Fetch history
+#         run: git fetch --prune --unshallow
+    
+#       - name: Lint Helm charts
+#         uses: helm/chart-testing-action@v1.0.0
+#         with:
+#           command: lint
+#           config: ./ct.yaml
+
+
 jobs:
-  lint:
-    name: Lint
+  lint-test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v2
-
-      - name: Fetch history
-        run: git fetch --prune --unshallow
-    
-      - name: Lint Helm charts
-        uses: helm/chart-testing-action@v1.0.0
         with:
-          command: lint
-          config: ./ct.yaml
+          fetch-depth: 0
+
+      - name: Set up Helm
+        uses: azure/setup-helm@v1
+        with:
+          version: v3.8.1
+
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+
+      - name: Set up chart-testing
+        uses: helm/chart-testing-action@v2.2.1
+
+      - name: Run chart-testing (list-changed)
+        id: list-changed
+        run: |
+          changed=$(ct list-changed --config ct.yml)
+          if [[ -n "$changed" ]]; then
+            echo "::set-output name=changed::true"
+          fi
+
+      - name: Run chart-testing (lint)
+        run: ct lint --config ct.yml
+
+      - name: Create kind cluster
+        uses: helm/kind-action@v1.2.0
+        with:
+          version: v0.12.0
+          node_image: kindest/node:v1.23.5
+          # kubectl_version: v1.23.6
+        if: steps.list-changed.outputs.changed == 'true'
+
+      - name: Run chart-testing (install)
+        run: ct install --config ct.yml
+      
+      - name: Run chart-testing (upgrade)
+        run: ct install --upgrade --config ct.yml
