--- a/ct.yaml
+++ b/ct.yaml
@@ -2,4 +2,4 @@ target-branch: main
 chart-dirs:
   - charts
 helm-extra-args: --timeout 600s
-check-version-increment: false
+# check-version-increment: false
