--- a/.github/workflows/helm-test.yaml
+++ b/.github/workflows/helm-test.yaml
@@ -53,7 +53,7 @@ jobs:
           fi
 
       - name: Run chart-testing (lint)
-        run: ct lint --config ct.yaml --check-version-increment=false
+        run: ct lint --config ct.yaml --check-version-increment=false --validate-maintainers=disable
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
